# Post-Sharing-Fast-Api

./: .env  .gitignore  build.sh  pyproject.toml  requirements.txt
app/: app.py  db.py  models.py  schemas.py
client/: electron-builder.json  index.html  package-lock.json  package.json  vite.config.js
client/electron/: main.cjs
client/public/: manifest.json  service-worker.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: CreatePost.jsx  PostList.jsx
static/: app.js  index.html  style.css
